--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.css
@@ -374,7 +374,7 @@ md-menu-item.blue svg {
 }
 .itemPage .comments-wrapper {
   left: 0;
-  color: #ffffff;
+  color: #212325;
   position: fixed !important;
   top: 65px;
   width: 300px;
