--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -439,7 +439,7 @@ md-menu-item {
 
     .comments-wrapper {
         left: 0;
-        color: @textColorWhite;
+        color: @textColorBlack;
         position: fixed !important;
         top: @heightOfHeader;
         width: 300px;
