--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Items.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/_Items.cshtml
@@ -39,7 +39,7 @@
                 </md-menu-item>
                 <md-menu-item>
                     <md-button aria-label="download" ng-href="{{::e.downloadLink}}" target="_blank" ga-track-event="['box-items', 'download']">
-                        <span ng-if="::e.type!=='Link'">@ItemsResources.Download</span>
+                        <span ng-click="b.follow()" ng-if="::e.type!=='Link'">@ItemsResources.Download</span>
                         <span ng-if="::e.type==='Link'">@GeneralResources.View</span>
                     </md-button>
                 </md-menu-item>
