--- a/Zbang.Cloudents.Mvc4WebRole/Views/Item/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Item/Index2.cshtml
@@ -38,8 +38,8 @@
                         <span><md-icon md-svg-icon="b:like"></md-icon></span>
                         <span>{{i.details.likes}}</span>
                     </button>
-                    <a hide-xs target="_blank" ng-click="i.followBox()" user-not-register-popup="click" href="{{i.details.downloadUrl}}" ga-track-event="['itemPage', 'download']"><md-icon md-svg-icon="i:download"></md-icon>@*@Html.Svg(svgUrl, "download")*@</a>
-                    <a hide-xs user-not-register-popup="click" ng-click="i.followBox()" href="{{i.details.printUrl}}" ga-track-event="['itemPage', 'print']"><md-icon md-svg-icon="i:print"></md-icon>@*@Html.Svg(svgUrl, "print")*@</a>
+                    <a hide-xs target="_blank" ng-click="i.followBox()" user-not-register-popup="click" href="{{i.details.downloadUrl}}" ga-track-event="['itemPage', 'download']"><md-icon md-svg-icon="i:download"></md-icon></a>
+                    <a hide-xs user-not-register-popup="click" ng-click="i.followBox()" target="_blank" href="{{i.details.printUrl}}"><md-icon md-svg-icon="i:print"></md-icon></a>
                     <div class="item-menu">
                         <md-menu flex>
                             <md-button aria-label="open menu" class="md-icon-button" user-not-register-popup="click" ng-click="app.openMenu($mdOpenMenu, $event)" ga-track-event="['itemPage', 'delete']">
@@ -52,7 +52,7 @@
                                     </md-button>
                                 </md-menu-item>
                                 <md-menu-item hide-gt-xs>
-                                    <md-button user-not-register-popup="click" href="{{i.details.printUrl}}" ga-track-event="['itemPage', 'print']">
+                                    <md-button user-not-register-popup="click" target="_blank" href="{{i.details.printUrl}}" ga-track-event="['itemPage', 'print']">
                                         @ItemsResources.Print
                                     </md-button>
                                 </md-menu-item>
