--- a/Zbang.Cloudents.Mvc4WebRole/Views/Item/Print.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Item/Print.cshtml
@@ -26,10 +26,9 @@
             window.onload = function () {
                 window.focus();
                 window.print();
-                window.onfocus = function () { window.close(); }
+                //window.onfocus = function () { window.close(); }
                // window.close();
             };
         </script>
     </body>
-
 </html>
