--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/Share.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/Share.less
@@ -232,7 +232,7 @@
                         width: 40px;
                         height: 40px;
                         background: @buttonColorBlue;
-                        color: @textColorBlack;
+                        color: @textColorWhite;
                         text-align: center;
                         line-height: 40px;
                         border-radius: 100%;
