--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/Share.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/Share.rtl.css
@@ -291,7 +291,7 @@
   width: 40px;
   height: 40px;
   background: #4190b9;
-  color: #212325;
+  color: #ffffff;
   text-align: center;
   line-height: 40px;
   border-radius: 100%;
