--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -460,7 +460,8 @@
     .flip-container, .flipper {
         .displayFlex;
         flex-grow: 1;
-        width:100%;
+        width: 100%;
+        height: 100%;
     }
 
     .front, .back {
@@ -474,10 +475,11 @@
             transition: 0.6s;
             transform-style: preserve-3d;
             position: relative;
-            .card-style;
         }
 
         .front, .back {
+            -moz-backface-visibility: hidden;
+            -webkit-backface-visibility: hidden;
             backface-visibility: hidden;
             position: absolute;
             top: 0;
@@ -499,12 +501,7 @@
             }
         }
     }
-    
-    //.front, .back {
-    //    .flipper {
-    //        // height: @cardHeight;
-    //    }
-    //}
+
     .front, .back, .both {
 
         .flip-container {
@@ -697,10 +694,10 @@
             position: relative;
             width: 100%;
             //height: @cardHeight;
-            .displayFlex;
+            /*.displayFlex;
             .align-items(stretch);
             .justifyContet(center);
-            flex-direction: column;
+            flex-direction: column;*/
             position: relative;
 
             @media(max-width: 600px) {
@@ -715,6 +712,9 @@
                     bottom: 0;
                     right: 0;
                     left: 0;
+                }
+                &.front, &.back {
+                    .card-style;
                 }
             }
 
@@ -748,45 +748,7 @@
                 }
                 /* the transition is defined in the active class */
             }
-            /*&.front, &.back {
-            .transition(5s, all, ease);
-            .flip-container {
-                perspective: 1000px;
-            }
 
-            .flip-container, .front, .back {
-                width: 800px;
-                height: 400px;
-            }
-
-            .flipper {
-                transition: 0.6s;
-                transform-style: preserve-3d;
-                position: relative;
-            }
-
-            .front, .back {
-                backface-visibility: hidden;
-                position: absolute;
-                top: 0;
-                left: 0;
-            }
-
-            .front {
-                z-index: 2;
-                transform: rotateY(0deg);
-            }
-
-            .back {
-                transform: rotateY(180deg);
-            }
-        }
-
-        &.back-add-active {
-            .flip-container .flipper {
-                transform: rotateY(180deg);
-            }
-        }*/
             &.front .card-content, &.back .card-content {
                 .side {
                     flex-direction: row;
@@ -794,25 +756,14 @@
 
                     @media(max-width: 600px) {
                         flex-direction: column;
-                       
                     }
                 }
             }
-            /*&.front .card-content {
-                .side.back {
-                    display: none;
-                }
-            }
 
-            &.back .card-content {
-                .side.front {
-                    display: none;
-                }
-            }*/
             &.both .card-content {
                 @media(max-width: 600px) {
                     flex-direction: column;
-                     width:100%;
+                    width: 100%;
                 }
 
                 .side {
