--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.rtl.css
@@ -600,6 +600,7 @@
   display: flex;
   flex-grow: 1;
   width: 100%;
+  height: 100%;
 }
 .flashcardPage .front .flip-container,
 .flashcardPage .back .flip-container {
@@ -611,14 +612,13 @@
   transition: 0.6s;
   transform-style: preserve-3d;
   position: relative;
-  background-color: #ffffff;
-  border-radius: 10px;
-  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.43);
 }
 .flashcardPage .front .front,
 .flashcardPage .back .front,
 .flashcardPage .front .back,
 .flashcardPage .back .back {
+  -moz-backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   backface-visibility: hidden;
   position: absolute;
   top: 0;
@@ -861,65 +861,11 @@
 }
 .flashcardPage .card-player .card-template {
   width: 100%;
-  display: -webkit-flex;
-  display: -ms-flex;
-  display: flex;
-  -webkit-align-items: stretch;
-  align-items: stretch;
-  -webkit-justify-content: center;
-  justify-content: center;
-  flex-direction: column;
+  /*.displayFlex;
+            .align-items(stretch);
+            .justifyContet(center);
+            flex-direction: column;*/
   position: relative;
-  /*&.front, &.back {
-            .transition(5s, all, ease);
-            .flip-container {
-                perspective: 1000px;
-            }
-
-            .flip-container, .front, .back {
-                width: 800px;
-                height: 400px;
-            }
-
-            .flipper {
-                transition: 0.6s;
-                transform-style: preserve-3d;
-                position: relative;
-            }
-
-            .front, .back {
-                backface-visibility: hidden;
-                position: absolute;
-                top: 0;
-                left: 0;
-            }
-
-            .front {
-                z-index: 2;
-                transform: rotateY(0deg);
-            }
-
-            .back {
-                transform: rotateY(180deg);
-            }
-        }
-
-        &.back-add-active {
-            .flip-container .flipper {
-                transform: rotateY(180deg);
-            }
-        }*/
-  /*&.front .card-content {
-                .side.back {
-                    display: none;
-                }
-            }
-
-            &.back .card-content {
-                .side.front {
-                    display: none;
-                }
-            }*/
 }
 @media (max-width: 600px) {
   .flashcardPage .card-player .card-template {
@@ -935,6 +881,12 @@
     left: 0;
     right: 0;
   }
+}
+.flashcardPage .card-player .card-template:not(.both) .card-content .side.front,
+.flashcardPage .card-player .card-template:not(.both) .card-content .side.back {
+  background-color: #ffffff;
+  border-radius: 10px;
+  box-shadow: 0 0 3px 0 rgba(0, 0, 0, 0.43);
 }
 .flashcardPage .card-player .card-template.ng-hide-add,
 .flashcardPage .card-player .card-template.ng-hide-remove {
