--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/_Settings.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/_Settings.cshtml
@@ -11,7 +11,7 @@
             <div ng-message="server">{{l.error}}</div>
         </div>
     </md-input-container>
-    <div class="set-private" ng-if="l.nodeDetail.state === 'open' && l.state.emptyNodeAdmin && l.nodeDetail.parentUrl.indexOf('?id') === -1">
+    <div class="set-private" ng-if="l.nodeDetail.state === 'open' && l.state.emptyNode && l.nodeDetail.parentUrl.indexOf('?id') === -1">
         <md-input-container flex="100" class="private-switch">
             <md-switch ng-model="l.settings.privacy" ng-true-value="'@LibraryNodeSetting.Closed.GetStringValueLowercase()'"
                        ng-false-value="'@Zbang.Zbox.Infrastructure.Enums.LibraryNodeSetting.Open.GetStringValueLowercase()'">@BoxResources.PrivacySwitchText</md-switch>
