--- a/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/University/ClassChoose.cshtml
@@ -9,6 +9,7 @@
                 <h2>@UniversityResources.ClassChooseYellowTitle1&nbsp;</h2><ng-pluralize count="cc.selectedCoursesView.length"
                                                                                          when="{
                      'one': '1 @GeneralResources.Class,',
+                     'two': '{} @GeneralResources.Classes,',
                      'other': '{} @GeneralResources.Classes,'}">
                 </ng-pluralize>
                 <div>
