--- a/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Flashcard/Index.cshtml
@@ -111,7 +111,7 @@
                                 <div class="img-container" ng-if="::slide.front.image">
                                     <img ng-src="{{::slide.front.image}}" alt="font image" />
                                 </div>
-                                <div class="text-container">
+                                <div class="text-container" ng-if="::slide.front.text">
                                     <p class="scrollbar" dir="auto" ng-bind="::slide.front.text" fit-text></p>
                                 </div>
                                 <div class="flip" ng-if="slide.style !== null">
@@ -128,7 +128,7 @@
                                 <div class="img-container" ng-if="::slide.cover.image">
                                     <img ng-src="{{::slide.cover.image}}" alt="font image" />
                                 </div>
-                                <div class="text-container">
+                                <div class="text-container" ng-if="::slide.cover.text">
                                     <p class="scrollbar" dir="auto" ng-bind="::slide.cover.text" fit-text></p>
                                 </div>
                                 <div class="flip" ng-if="slide.style !== null">
