--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/item.less
@@ -664,9 +664,10 @@ md-menu-item {
 
     .ad {
         text-align: center;
-        display: inline;
+        //display: inline;
         width:970px;
-        height:300px;
+        height:98px;
+        margin:0 auto;
     }
 
     .hideActions {
