--- a/Zbang.Cloudents.Mvc4WebRole/Views/Item/UploadDialog.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Item/UploadDialog.cshtml
@@ -1,10 +1,6 @@
 ﻿@using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 @using Zbang.Cloudents.Mvc4WebRole.Views.User.Resources
-@{
-    //const string url = "~/images/site/uploadIcons.svg";
-}
-<a id="upload"></a>
-<div class="portlet invite box upload" ng-controller="Upload as u">
+<div id="upload" class="portlet invite box upload" ng-controller="Upload as u">
     <div class="portlet-title">
         <div class="caption">
             @IndexResources.UploadFiles
