--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcard.less
@@ -162,7 +162,7 @@
             top: @heightOfHeader;
             left: 0;
             right: 0;
-            z-index: 1;
+            z-index: 2;
             background: @backgroundColor;
             padding-bottom: 25px;
         }
@@ -633,7 +633,7 @@
                 border-radius: 10px;
 
                 @media(max-width:600px) {
-                    height: 42px;
+                    height: 46px;
                     font-size: 16px;
                 }
 
@@ -644,8 +644,8 @@
                         background: #c7a017;
                     }
 
-                    ng-pluralize {
-                        display: inline-block;
+                    ng-pluralize, span {
+                        display: inline;
                         margin: 0;
                     }
                 }
@@ -811,10 +811,6 @@
 
                     @media(max-width: 600px) {
                         max-height: @cardHeight/2;
-
-                        .text-container p {
-                            margin: 0;
-                        }
                     }
                 }
 
@@ -896,6 +892,7 @@
                             font-size: 48px;
                             overflow: auto;
                             height: 100%;
+                            margin: 0 auto;
 
                             &.lessText {
                                 margin: 0 auto;
@@ -926,10 +923,6 @@
                             padding: 10px 0;
                         }
                     }
-
-                    .text-container p {
-                        margin: 0;
-                    }
                 }
             }
 
@@ -937,6 +930,7 @@
                 position: absolute;
                 top: 10px;
                 right: 5px;
+                z-index: 1;
 
                 &.pinned md-icon {
                     fill: @pinColor;
