--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
@@ -641,6 +641,12 @@ md-input-container .md-input-message-animation:not(.ng-animate) {
   opacity: 1;
   margin-top: 0;
 }
+[dir=rtl] md-tabs-wrapper md-next-button {
+  transform: translate(0, -50%) rotate(-180deg);
+}
+[dir=rtl] md-tabs-wrapper md-prev-button {
+  transform: translate(0, -50%) rotate(-180deg);
+}
 .back-arrow {
   margin-left: 10px;
   -moz-transform: rotate(0);
