--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/Index2.cshtml
@@ -16,24 +16,25 @@
     </div>
 </div>
 <div uib-collapse="!b.settingsOpen" compile-html="b.settingsHtml" class="collapsible settings"></div>
-
-<md-tabs class="box-nav-bar page-tabs" md-enable-disconnect="true">
-    <md-tab ui-sref="box.feed" md-active="b.isActiveState('box.feed')">
-        <md-tab-label><span>@BoxResources.Feed</span></md-tab-label>
-    </md-tab>
-    <md-tab ui-sref="box.items" md-active="b.isActiveState('box.items')">
-        <md-tab-label><span>@IndexResources.Items</span></md-tab-label>
-    </md-tab>
-    <md-tab ui-sref="box.quiz" md-active="b.isActiveState('box.quiz')">
-        <md-tab-label><span>@GeneralResources.Quizzes</span></md-tab-label>
-    </md-tab>
-    <md-tab ui-sref="box.flashcards" md-active="b.isActiveState('box.flashcards')">
-        <md-tab-label><span>@FlashcardResources.CardsLabel</span></md-tab-label>
-    </md-tab>
-    <md-tab ui-sref="box.members" md-active="b.isActiveState('box.members')">
-        <md-tab-label><span>@GeneralResources.Members</span></md-tab-label>
-    </md-tab>
-</md-tabs>
+<div  dir="ltr">
+    <md-tabs class="box-nav-bar page-tabs" @*md-enable-disconnect="true"*@>
+        <md-tab ui-sref="box.feed" md-active="b.isActiveState('box.feed')">
+            <md-tab-label><span>@BoxResources.Feed</span></md-tab-label>
+        </md-tab>
+        <md-tab ui-sref="box.items" md-active="b.isActiveState('box.items')">
+            <md-tab-label><span>@IndexResources.Items</span></md-tab-label>
+        </md-tab>
+        <md-tab ui-sref="box.quiz" md-active="b.isActiveState('box.quiz')">
+            <md-tab-label><span>@GeneralResources.Quizzes</span></md-tab-label>
+        </md-tab>
+        <md-tab ui-sref="box.flashcards" md-active="b.isActiveState('box.flashcards')">
+            <md-tab-label><span>@FlashcardResources.CardsLabel</span></md-tab-label>
+        </md-tab>
+        <md-tab ui-sref="box.members" md-active="b.isActiveState('box.members')">
+            <md-tab-label><span>@GeneralResources.Members</span></md-tab-label>
+        </md-tab>
+    </md-tabs>
+</div>
 <div ui-view></div>
 <script defer type="text/ng-template" id="shareBoxTemplate.html">
     <div class="share-section">
