--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.less
@@ -14,6 +14,7 @@
         .bottom {
             display: block;
             text-align: right;
+            padding-bottom: 50px;
         }
     }
 
@@ -92,6 +93,7 @@
             @media(min-width: 600px) {
                 margin: 14px 0;
             }
+
             &:before {
                 content: counter(counter,decimal);
                 counter-increment: counter;
@@ -110,24 +112,27 @@
                 padding-top: 100px;
             }
 
-            .settings-btn {
+            label {
                 .displayFlex;
-                .align-items(center);
-                .justifyContet(center);
-                width: @mobileCardHeight;
-                background: @backgroundCalmGrey;
-                border: 1px solid #b7b7b7;
-                border-left: none;
-                height: 100%;
 
-                @media(min-width: 600px) {
-                    display: none;
-                }
+                .settings-btn {
+                    .displayFlex;
+                    .align-items(center);
+                    .justifyContet(center);
+                    width: @mobileCardHeight;
+                    background: @backgroundCalmGrey;
+                    border: 1px solid #b7b7b7;
+                    border-left: none;
+                    //height: 100%;
+                    @media(min-width: 600px) {
+                        display: none;
+                    }
 
-                md-icon {
-                    width: 20px;
-                    height: 20px;
-                    fill: @textColorLightGrey;
+                    md-icon {
+                        width: 20px;
+                        height: 20px;
+                        fill: @textColorLightGrey;
+                    }
                 }
             }
 
@@ -294,6 +299,9 @@
                     width: @cardHeight - 4px;
                     height: @cardHeight - 4px;
                     overflow: hidden;
+                    .displayFlex;
+                    .align-items(center);
+                    .justifyContet(center);
 
                     @media(max-width: 600px) {
                         top: 0;
@@ -311,8 +319,8 @@
 
                     img {
                         object-fit: cover;
-                        width: 100%;
-                        height: 100%;
+                        max-width: 100%;
+                        max-height: 100%;
                     }
 
                     &:hover {
@@ -507,9 +515,6 @@
                 border-left: none;
             }
         }
-
-
-        
     }
 }
 
