--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/flashcardCreate.rtl.css
@@ -10,6 +10,7 @@
 .flashcard .content .bottom {
   display: block;
   text-align: left;
+  padding-bottom: 50px;
 }
 .flashcard .flashcard-top {
   margin-top: 95px;
@@ -113,7 +114,12 @@
 .flashcard .flashcard-body .card-container.on-drag-hover:not(.focused) {
   padding-top: 100px;
 }
-.flashcard .flashcard-body .card-container .settings-btn {
+.flashcard .flashcard-body .card-container label {
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+}
+.flashcard .flashcard-body .card-container label .settings-btn {
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
@@ -125,14 +131,13 @@
   background: #eeeeee;
   border: 1px solid #b7b7b7;
   border-right: none;
-  height: 100%;
 }
 @media (min-width: 600px) {
-  .flashcard .flashcard-body .card-container .settings-btn {
+  .flashcard .flashcard-body .card-container label .settings-btn {
     display: none;
   }
 }
-.flashcard .flashcard-body .card-container .settings-btn md-icon {
+.flashcard .flashcard-body .card-container label .settings-btn md-icon {
   width: 20px;
   height: 20px;
   fill: #c3c3c3;
@@ -285,6 +290,13 @@
   width: 54px;
   height: 54px;
   overflow: hidden;
+  display: -webkit-flex;
+  display: -ms-flex;
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  -webkit-justify-content: center;
+  justify-content: center;
 }
 @media (max-width: 600px) {
   .flashcard .flashcard-body .card-container card-form .image-container {
@@ -301,8 +313,8 @@
 }
 .flashcard .flashcard-body .card-container card-form .image-container img {
   object-fit: cover;
-  width: 100%;
-  height: 100%;
+  max-width: 100%;
+  max-height: 100%;
 }
 .flashcard .flashcard-body .card-container card-form .image-container:hover img {
   opacity: 0.4;
